<resources>
    <string name="app_name">FinSchoolApp</string>
    <string name="label_login">Логин</string>
    <string name="label_entry">Вход</string>
    <string name="label_password">Пароль</string>
    <string name="button_forgot_password">Забыли пароль?</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_sign_up">Зарегистрироваться</string>
    <string name="welcome_text">
        Привет, я Толик! Совсем недавно я оказался на улице из-за того, что задолжал много денег местному банку. Поможешь мне снова стать богаче?
    </string>
    <string name="button_what_to_do">Что мне делать?</string>
    <string name="rules">
        Я становлюсь богаче, когда ты становишься более финансово грамотным и рассказываешь мне интересные вещи. Поэтому тебе надо читать статьи, проходить тесты и копить деньги на мечту! А я научусь на твоем примере!
    </string>
    <string name="button_help">Хорошо, я тебе помогу!</string>
    <string name="button_next_theme">Следующая тема</string>
    <string name="incomes_ans_expenses_first">Доход – это те средства, которые мы с вами получаем за какую-то деятельность. К этой категории относится заработная плата, любые социальные выплаты, деньги, полученные в наследство.\n\nЗаработная плата – это деньги, которые работник получает в обмен за свой труд. Это один из основных направлений дохода. \n\nПо большому счету, любой приток денежных средств можно назвать доходом в широком смысле этого слова. Даже если вы продали старое неиспользуемое пианино, то деньги, вырученные за него, будут вашим доходом. В идеале, все такие доходы нужно декларировать в налоговой инспекции, но ее представители следят лишь за тем, чтобы граждане не утаивали крупные суммы средств. На предприятиях виды доходов регламентируются более строго. \n\nВиды дохода: \n– Активный и пассивный \nАктивный доход – это доход, получаемый от собственных ежедневных усилий. Делаете вы усилия – доход есть. Решили вы сделать паузу и немного отойти от дел – дохода нет. \n\nПассивный доход - это вид заработка, для получения которого не требуется активных действий. Вместо этого источником заработка становится актив (деньги, недвижимость и др.), находящийся в собственности человека.\n\n– Первичный и вторичный \nПервичные доходы - это доходы, которые получают собственники фактора производства. \n\nПример. Работники получают заработную плату, акционер получает дивиденды по акциям. Вторичные доходы – это доходы, которые образуются и перераспределяются в основном по государственным каналам. \n\nПример. Установление государством минимального размера оплаты труда (МРОТ) \n\n– Основной и дополнительный \nОсновной доход – это доход, который получает человек в своей основной деятельности или профессиональной области.\n\nДополнительный доход – это доход от дополнительной работы или инвестиций. \n\n– Денежный и неденежный \nДенежный – привычный нам вид дохода, обмен услуг или товаров на денежную валюту. \n\nНеденежный – это доход в котором мы на прямую не получаем деньги, а к примеру в обмен на услугу взаимообмен (или бартер).</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_text">Иван Иванов</string>
    <string name="user_level_text">Уровень: 1</string>
    <string name="user_coins_text">Монеты: 100</string>
    <string name="saved_topics">Сохраненные темы</string>
    <string name="progress">Достижения</string>
    <string name="achievement_1">Пройти первый модуль</string>
    <string name="achievement_2">Пройти 3 теста подряд без ошибок</string>
    <string name="achievement_3">Получить 5 уровень персонажа</string>
    <string name="achievement_4">Накопить на цель</string>
    <string name="label_registration">Регистрация</string>
    <string name="label_name">Имя</string>
    <string name="label_email">Электронная почта</string>
    <string name="label_password_again">Повторите пароль</string>
    <string name="button_next">Далее</string>
    <string name="button_sign_in_from_reg">Уже есть аккаунт? Войти</string>

    <string name="label_password_recovery">Восстановление пароля</string>
    <string name="label_we_send_code">Мы отправим код подтверждения на электронную почту, указанную при регистрации</string>
    <string name="label_confirm">Подтверждение</string>
    <string name="label_code">Код из письма</string>
    <string name="label_send_code_again">Отправить письмо повторно</string>
    <string name="label_check_email">Проверьте почту. Сообщение придет в течение нескольких минут</string>
    <string name="button_send">Отправить</string>
    <string name="button_confirmation">Подтвердить</string>

    <string name="label_hooray">УРА!</string>
    <string name="label_change_your_password">Теперь осталось поменять пароль</string>
    <string name="button_save_and_log_in">Сохранить и войти</string>

    <string name="label_successfully">Успешно!</string>
    <string name="label_lets_study">Теперь можно приступить к учебе</string>
    <string name="button_okay_lets_study">Поехали</string>

    <string name="label_profile_settings">Настройки профиля</string>
    <string name="label_old_password">Старый пароль</string>
    <string name="label_new_password">Новый пароль</string>
    <string name="button_save_changes">Сохранить изменения</string>
    <string name="button_log_out">Выйти из аккаунта</string>
    <string name="button_delete_account">Удалить аккаунт</string>

    <string name="button_continue">Продолжить</string>

    <string name="label_no_goal">У тебя ещё нет финансовой цели!</string>
    <string name="button_add_goal">Добавить цель</string>
    <string name="button_add_photo">Добавить фото</string>
    <string name="button_create_goal">Создать цель</string>

    <string name="label_learning">Обучение</string>
    <string name="label_progress">Прогресс</string>
    <string name="label_wallet">Учёт</string>

    <string name="first_game_start">У Толика получается заработать за день 50 рублей. Обед в столовой обходится в 30 рублей, он ест каждый день. Оставшиеся 20 рублей он использует на свое усмотрение.\n\nЧасто получается так, что Том бездумно тратит все и остается без еды и денег.\n\nПокажи ему, как надо!</string>
    <string name="tom_need_help">Толику нужна помощь</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <string name="successful_end_first_level">Толик ничего не делал, но зато ничего не потерял. У него в кармане осталось</string>
    <string name="increase_level">"Том повышает свой уровень!"</string>

    <string name="button_complete_module">Завершить модуль</string>
    <string name="label_hooray_lower">Ура!</string>

    <string name="label_rip_game">Неудача</string>
    <string name="text_rip_game">У Тома совсем не осталось денег. Тебе придется перепройти уровень заново, чтобы спасти Тома</string>
    <string name="text_tom_rip">Том находится на грани смерти :(</string>
    <string name="try_again">Перепройти</string>

    <string name="task_text">Друг Тома предлагает: «Пойдем, поработаем на автозаправке,  принадлежащей моему дяде,  будем стекла мыть машинам. Я там вчера 50 рублей заработал за 2 часа».</string>
    <string name="to_work">Поработать</string>
    <string name="refuse">Отказаться</string>
    <string name="game_question_text">Как поступить Тому?</string>

    <string name="fifth_game_start">Том решил освоить инвестирование на практике. Помоги ему выбрать стратегию инвестирования. Изначально у Тома есть 50000 рублей.\n\n
        В каждом случае будет представлено сообщение из новостей, которое может повлиять на фондовый рынок. Помоги Тому распорядиться деньгами так, чтобы прибыль была наибольшей.\n
        1 ход равен трём месяцам</string>
    <string name="investing">Инвестирование</string>
    <string name="fifth_game_1_text">“Аналитики предсказывают падение криптовалюты вследствие падения интереса со стороны пользователей сети.”\n
        “Компания СпортСтрой выиграла тендер на строительство стадиона.”\n\n
        Том хочет вложить 10000 рублей.</string>
    <string name="fifth_game_1_text_question">Куда Том вложит деньги?</string>

    <string name="fifth_game_end">Том научился правильно инвестировать свои финансы!</string>
    <string name="label_results">Итоги</string>
    <string name="chosen_right_strategy">Вы верно выбрали стратегию</string>
    <string name="bed_fifth_game_end">Тому не удалось научиться вкладывать свои средства грамотно. Вам нужно пройти уровень заново.</string>
    <string name="not_increase_level">Том не повышает свой уровень</string>
    <string name="try_again_level">Перепройти уровень</string>
    <string name="end_seventh_module">Молодец! Том приобретает новые знания и умения по теме “Финансовая безопасность”. Приготовься, в следующем модуле тебя ждет заключительная игра!</string>
    <string name="end_eight_module">Поздравляем! Вы помогли Тому освоить финансовую грамотность: теперь у него нет долгов в банке, он знает как обращаться со своими финансами правильно,\n\n не попадается на мошеннические уловки и грамотно составляет личный финансовый план. Спасибо за прохождение!</string>

    <string name="choosing_insurance">Уля-ля!\n
    У Тома намечается поездка на море за границу с друзьями. Всякое может произойти. Какую страховку оформить в путешествие?</string>
    <string name="dms">ДМС (30 000 рублей)</string>
    <string name="property">Недвижимое имущество (50 000 рублей)</string>
    <string name="vsr">ВЗР (30 000 рублей)</string>

    <string name="title_help_dms">Добровольное медицинское страхование</string>
    <string name="title_help_property">Недвижимое имущество</string>
    <string name="title_help_vsr">Выезжающие за рубеж</string>

    <string name="help_dms">Лечение (в стационаре или амбулаторно), диагностика, обследования, консультации узких специалистов, скорая помощь в домашнем регионе</string>
    <string name="help_property">Пожар, взрыв, стихийные бедствия, авария водопроводных, канализационных, отопительных, падение летательных аппаратов или их частей, падение деревьев и других предметов и др.</string>
    <string name="help_vsr">Медицинская помощь, диагностика и лечение, приобретение необходимых лекарств, экстренная стоматологическая помощь, транспортировка до места лечения за границей</string>

    <string name="ok">Понятно</string>

    <string name="insurance">Страхование</string>

    <string name="add_to_vsr">Добавить к полису ВЗР страхование от невыезда?</string>
    <string name="yes_add_to_vsr">Да (5000 рублей)</string>
    <string name="no_add_to_vsr">Нет</string>

    <string name="label_username">Бомж Толик</string>
    <string name="label_level">Уровень:</string>
  
    <string name="label_second_and_third_mini_game">Толик планирует бюджет</string>
    <string name="task_second_and_third_mini_game">Толик устроился на хорошую работу! Теперь ему платят 55 тыс. рублей в месяц, но и расходы заметно выросли: 25 тысяч он тратит на аренду жилья. У него остается 30 тысяч.\n\nНужно чем-то кормить Толика и помогать ему планировать бюджет так, чтобы исполнить его мечту: он хочет купить себе ноутбук за 50 тысяч рублей</string>
    <string name="button_finish_module">Завершить модуль</string>
    <string name="button_restart_level">Перепройти уровень</string>
    <string name="spent_text">Потрачено в этом месяце:</string>

    <string name="saved_module">Модуль 1. Тема 1.1</string>
    <string name="label_fourth_mini_game">Что выгоднее?</string>
    <string name="task_fourth_mini_game">В каждом из семи случаев укажите, какая из альтернатив позволит Толику потратить меньше денежных средств</string>
    <string name="finish_fourth_mini_game">Игра завершена!</string>

</resources>